<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="cycle_Ptb" Id="{3372afe3-7bac-48c1-8590-ff62db918e56}">
    <Declaration><![CDATA[FUNCTION cycle_Ptb : BOOL
VAR_INPUT
	pPtb: POINTER TO T_PTB;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[pPtb^.ctrl.fbPtb_Umc.In_uinStatus 				:= pPtb^.io.In_uinUmc_Status;
pPtb^.ctrl.fbPtb_Umc.In_intMotorActualSpeed 	:= pPtb^.io.In_uinUmc_ActualSpeed;
pPtb^.ctrl.fbPtb_Umc.In_uinMotorSetSpeed 		:= pPtb^.io.In_uinUmc_SetSpeed;
pPtb^.ctrl.fbPtb_Umc.In_uinIOData				:= pPtb^.io.In_uinUmc_IOData1;
pPtb^.ctrl.fbPtb_Umc.In_uinECATState 			:= pPtb^.io.In_uinUmc_ECatState;
pPtb^.ctrl.fbPtb_Umc.In_strNetId 				:= pPtb^.io.In_strUmc_ECatNetId;
pPtb^.ctrl.fbPtb_Umc.In_uintPort 				:= pPtb^.io.In_uinUmc_ECatPort;
pPtb^.ctrl.fbPtb_Umc();
pPtb^.io.Out_uinUmc_SetSpeed 					:= pPtb^.ctrl.fbPtb_Umc.Out_uinSpeedSetpoint;
pPtb^.io.Out_uinUmc_Control 					:= pPtb^.ctrl.fbPtb_Umc.Out_uinControl;

pPtb^.ctrl.fbPtb_Vpc.In_bolPumpOk 				:= pPtb^.io.In_bolVpc_PumpOk;
pPtb^.ctrl.fbPtb_Vpc.In_bolVacuumOk 			:= pPtb^.io.In_bolVpc_VacuumSensor;
pPtb^.ctrl.fbPtb_Vpc();
pPtb^.io.Out_bolVpc_PumpOn 						:= pPtb^.ctrl.fbPtb_Vpc.Out_bolVaccumPumpOn;

pPtb^.ctrl.fbPtb.In_bolBeltEntrySensor		 	:= pPtb^.io.In_bolInputSensor;
pPtb^.ctrl.fbPtb.In_bolBeltExitSensor 			:= pPtb^.io.In_bolOutputSensor;
pPtb^.ctrl.fbPtb();]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>